--- a/templates/websocketTest.html
+++ b/templates/websocketTest.html
@@ -12,7 +12,8 @@
         <ul id='messages'>
         </ul>
         <script>
-            var ws = new WebSocket("ws://localhost:8000/ws/animation/888888");
+            var roomName = '888888'
+            var ws = new WebSocket(`ws://localhost:8000/ws/animation/${roomName}/`);
             ws.onmessage = function(event) {
                 var messages = document.getElementById('messages')
                 var message = document.createElement('li')
